# NuageProject

./: .gitignore  Dockerfile  README.md  main.tf  pyproject.toml
.github/workflows/: main.yml
api/: api.py
back/templates/: index.html
infrastructure/: main.tf  output.tf  outputs.tf  provider.tf  variable.tf
infrastructure/modules/app_gateway/: main.tf  variables.tf
infrastructure/modules/app_service/: main.tf  outputs.tf  variable.tf
infrastructure/modules/blob_storage/: main.tf  outputs.tf  product.json  variable.tf
infrastructure/modules/postgreSQL/: main.tf  outputs.tf  variables.tf
infrastructure/modules/resource_group/: outputs.tf  variable.tf
infrastructure/modules/virtual_network/: main.tf  outputs.tf  variables.tf
tests/: tests.py
